--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
 
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'androidx.palette:palette:1.0.0-beta01'
 }
