--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
@@ -26,13 +25,42 @@ androidExtensions {
     experimental = true
 }
 
+ext {
+    androidSupportVersion = "27.1.1"
+    timberVersion = "4.6.1"
+    butterknifeVersion = "8.8.1"
+    rxJavaVersion = "2.1.9"
+    rxandroidVersion = "2.0.2"
+    rxBindingVersion = "2.1.1"
+    picassoVersion = "2.5.2"
+    gsonVersion = "2.7"
+    roomVersion = "2.0.0-beta01"
+    retrofitVersion = "2.3.0"
+    daggerVersion = "2.11"
+    okhttpVersion = "3.9.1"
+    debugDatabaseVersion = "1.0.3"
+    circleIndicator = "1.2.2@aar"
+    photoView = "2.1.3"
+    rxbinding = "2.1.1"
+    junitVersion = "4.12"
+    testRunnerVersion = "1.0.1"
+    espressoVersion = "3.0.1"
+    mockitoVersion = "2.10.0"
+}
+
 dependencies {
 
     def anko_version = '0.10.5'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation "androidx.room:room-runtime:${roomVersion}"
+    implementation "androidx.room:room-rxjava2:${roomVersion}"
+    kapt "androidx.room:room-compiler:${roomVersion}"
+
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+
     implementation 'com.google.android.material:material:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     testImplementation 'junit:junit:4.12'
@@ -42,4 +70,28 @@ dependencies {
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.palette:palette:1.0.0-beta01'
+
+    implementation "com.jakewharton.timber:timber:${timberVersion}"
+
+    implementation "io.reactivex.rxjava2:rxjava:${rxJavaVersion}"
+    implementation "io.reactivex.rxjava2:rxandroid:${rxandroidVersion}"
+    implementation "com.google.code.gson:gson:${gsonVersion}"
+
+    implementation "com.squareup.retrofit2:retrofit:${retrofitVersion}"
+    implementation "com.squareup.retrofit2:converter-gson:${retrofitVersion}"
+    implementation "com.squareup.retrofit2:converter-scalars:${retrofitVersion}"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}"
+    implementation "com.squareup.okhttp3:okhttp:${okhttpVersion}"
+    implementation "com.squareup.okhttp3:logging-interceptor:${okhttpVersion}"
+    implementation "com.google.dagger:dagger:${daggerVersion}"
+    implementation "com.google.dagger:dagger-android-support:${daggerVersion}"
+    implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:${rxbinding}"
+    kapt "com.jakewharton:butterknife-compiler:${butterknifeVersion}"
+    kapt "com.google.dagger:dagger-compiler:${daggerVersion}"
+    kapt "com.google.dagger:dagger-android-processor:${daggerVersion}"
+    debugImplementation "com.amitshekhar.android:debug-db:${debugDatabaseVersion}"
+    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
+    compile project(path: ':domain')
+    compile project(path: ':data')
+
 }
