--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,14 +28,14 @@
         </activity>
 
         <activity
-            android:name="foodapp.com.foodapp.ui.detail.list.FoodListActivity"
+            android:name=".ui.list.FoodListActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name="foodapp.com.foodapp.main.ui.detail.FoodDetailsActivity"
+            android:name=".ui.detail.FoodDetailsActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
     </application>
 
 </manifest>
